--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pretty": "prettier --single-quote  --write 'src/**/*.js'"
+    "pretty": "prettier --single-quote --print-width 80 --write 'src/**/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
